--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Login</title></head>
 <body>
-    <h2>Admin Login</h2>
+    <h2>Student Login</h2>
     <form method="POST">
         Email: <input type="email" name="email"><br><br>
         Password: <input type="password" name="password"><br><br>
