--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head><title>Login</title></head>
+<head>
+    <title>Student Login</title>
+</head>
 <body>
-    <h2>Admin Login</h2>
+    <h2>Student Login</h2>
     <form method="POST">
         Email: <input type="email" name="email"><br><br>
         Password: <input type="password" name="password"><br><br>
-        <button type="submit">Login</button>
+        <button type="submit">Login</button><br><br>
+        <a href="/forgot-password">Forgot Password?</a>
     </form>
 </body>
 </html>
